--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
     <hr/>
 
-    <h3><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movie-ranking.png" alt="best movies screenshot" height="200">
 
-    <h3><a href="../3.4 Birthday Invite Project/index.html">Birthday Invite Project</a></h3>
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthday-invite.png" alt="purple birthday cake with candles" height="200">
 
     <hr/>
